--- a/package.json
+++ b/package.json
@@ -53,15 +53,20 @@
     "express": "4.13.4",
     "extract-text-webpack-plugin": "1.0.1",
     "file-loader": "0.8.5",
+    "image-webpack-loader": "^3.3.1",
     "jsdom": "8.5.0",
     "mocha": "2.4.5",
     "nock": "8.0.0",
+    "node-sass": "^4.5.3",
     "npm-run-all": "1.8.0",
     "open": "0.0.5",
     "react-addons-test-utils": "15.0.2",
+    "react-slick": "^0.14.11",
     "redux-immutable-state-invariant": "1.2.3",
     "redux-mock-store": "1.0.2",
     "rimraf": "2.5.2",
+    "sass-loader": "^6.0.6",
+    "slick-carousel": "^1.7.1",
     "style-loader": "0.13.1",
     "url-loader": "0.5.7",
     "webpack": "1.13.0",
