--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-router-redux": "4.0.4",
     "react-style": "^0.5.5",
     "redux": "3.5.2",
+    "redux-immutable-state-invariant": "^1.2.3",
     "redux-thunk": "2.0.1",
     "toastr": "2.1.2"
   },
