--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-polyfill": "6.8.0",
     "bootstrap": "^3.3.6",
     "jquery": "2.2.3",
+    "material-ui": "^0.19.0",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-addons-css-transition-group": "^15.6.0",
