--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "license": "MIT",
   "dependencies": {
     "babel-polyfill": "6.8.0",
+    "body-parser": "^1.17.2",
     "bootstrap": "^3.3.6",
+    "colors": "^1.1.2",
     "jquery": "2.2.3",
     "material-ui": "^0.19.0",
     "prop-types": "^15.5.10",
