--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "bootstrap": "^3.3.6",
     "colors": "^1.1.2",
     "jquery": "2.2.3",
+    "knex": "^0.10.0",
     "material-ui": "^0.19.0",
+    "pg": "^4.5.3",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-addons-css-transition-group": "^15.6.0",
