--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "babel-polyfill": "6.8.0",
     "body-parser": "^1.17.2",
+    "bookshelf": "^0.10.4",
     "bootstrap": "^3.3.6",
     "colors": "^1.1.2",
     "jquery": "2.2.3",
